<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:elevation="0dp"
    android:id="@+id/card"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/purple_200"
    app:cardCornerRadius="15dp"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/avatar"
            tools:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/avatar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:textSize="15sp"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>